@@ -2,6 +2,7 @@
  * off-heap cache to use sun.misc.Unsafe instead of JNA (CASSANDRA-3271)
  * EACH_QUORUM is only supported for writes (CASSANDRA-3272)
  * cleanup usage of StorageService.setMode() (CASANDRA-3388)
+ * replace compactionlock use in schema migration by checking CFS.isInvalidD
 
 
 1.0.1
